# AlgoTrader

./: .cproject  .gitignore  .project  CMakeLists.txt
Debug/: AlgoTrader  makefile  sources.mk
Debug/src/: AlgoTrader.d  subdir.mk
Debug/src/DataLoaders/: CSVDataLoader.d  subdir.mk
Debug/src/backtesters/: BasicBackTester.d  subdir.mk
Debug/src/backtesters/benchmarks/: BasicInvestor.d  subdir.mk
Debug/src/common/: CSVRow.d  subdir.mk
Debug/src/finance/: Portfolio.d  Position.d  Stock.d  Wallet.d  subdir.mk
Debug/src/finance/exitconditions/: NeverExitCondition.d  subdir.mk
Debug/src/tradeloops/: MinuteLoop.d  subdir.mk
Debug/src/traders/: BasicTrader.d  subdir.mk
src/: AlgoTrader.cpp  main.cpp
src/DataLoaders/: CSVDataLoader.cpp  CSVDataLoader.hpp  IDataLoader.hpp
src/algorithm/: AlgorithmRegistry.cpp  AlgorithmRegistry.hpp  BasicInvestor.cpp  BasicInvestor.hpp  CMakeLists.txt  IAlgorithm.cpp  IAlgorithm.hpp  IAlgorithmRegistry.cpp  IAlgorithmRegistry.hpp
src/backtesters/: BasicBacktester.hpp  IBackTester.hpp
src/backtesters/benchmarks/: BasicInvestor.cpp  BasicInvestor.hpp  IBenchmark.hpp
src/common/: CSVRow.cpp  CSVRow.hpp
src/finance/: CMakeLists.txt  IPortfolio.hpp  IPosition.hpp  IWallet.hpp  Portfolio.cpp  Portfolio.hpp  Position.cpp  Position.hpp  Stock.cpp  Wallet.cpp  Wallet.hpp
src/finance/exitconditions/: IExitCondition.hpp  NeverExitCondition.cpp  NeverExitCondition.hpp
src/stocks/: CMakeLists.txt  IStock.hpp  IStockRegistry.hpp  IStockSubscriber.hpp  Stock.cpp  Stock.hpp  StockRegistry.cpp  StockRegistry.hpp
src/tradeloops/: ITradeLoop.hpp  MinuteLoop.cpp  MinuteLoop.hpp
src/traders/: BasicTrader.cpp  BasicTrader.hpp  ITrader.hpp
test/finance/: TestWallet.cpp
test/stocks/: TestStockFlow.cpp
